manifests/api-rum-teste.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rum-teste
  labels:
    app: api-rum-teste
    tags.datadoghq.com/env: dev
    tags.datadoghq.com/service: api-rum-teste
    tags.datadoghq.com/version: "1.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rum-teste
  template:
    metadata:
      labels:
        app: api-rum-teste
        tags.datadoghq.com/env: dev
        tags.datadoghq.com/service: api-rum-teste
        tags.datadoghq.com/version: "1.2"
     #   admission.datadoghq.com/enabled: "true"
     # annotations:
     #   admission.datadoghq.com/java-lib.version: v1.39.0
    spec:
      containers:
      - name: api-rum-teste
        image: vinicpires/api-rum-teste:SHORT_SHA
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: api-rum-teste-service
  labels:
    app: api-rum-teste
spec:
  selector:
    app: api-rum-teste
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-rum-teste-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "cloudflare-cluster-issuer"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://rum-frontend.k8s.lab4ever.xyz"
    nginx.ingress.kubernetes.io/cors-allow-headers: "x-datadog-trace-id, x-datadog-parent-id, x-datadog-origin, x-datadog-sampling-priority, traceparent, content-type"
spec:
  rules:
    - host: api-rum-teste.k8s.lab4ever.xyz  # Substitua pelo seu domínio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-rum-teste-service
                port:
                  number: 80
  tls:
    - hosts:
        - api-rum-teste.k8s.lab4ever.xyz
      secretName: api-rum-teste-tls
