manifests/api_clinica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-clinica
  labels:
    app: api-clinica
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: api_clinica
    tags.datadoghq.com/version: "1.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-clinica
  template:
    metadata:
      labels:
        app: api-clinica
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: api_clinica
        tags.datadoghq.com/version: "1.1"
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/java-lib.version: v1.39.0
    spec:
      containers:
      - name: api-clinica
        image: vinicpires/api_clinica:SHORT_SHA
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: api-clinica-service
  labels:
    app: api-clinica
spec:
  selector:
    app: api-clinica
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-clinica-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "cloudflare-cluster-issuer"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://clinica-frontend.k8s.lab4ever.xyz"
spec:
  rules:
    - host: api-clinica.k8s.lab4ever.xyz  # Substitua pelo seu domínio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-clinica-service
                port:
                  number: 80
  tls:
    - hosts:
        - api-clinica.k8s.lab4ever.xyz
      secretName: api-clinica-tls
